--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -15,7 +15,7 @@ jobs:
       - name: PONG - Dispatch response to received PING
         if: github.event.action == 'ping'
         run: |
-          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" https://api.github.com/repos/Cutwell/cutwell.github.io/dispatches -d '{"event_type":"on-demand-test","client_payload":{ "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" https://api.github.com/repos/Cutwell/cutwell.github.io/dispatches -d '{"event_type":"pong","client_payload":{ "repository": "'"$GITHUB_REPOSITORY"'" }}'
       
       - name: Checkout
         if: github.event.action == 'ping'
